# zakup_notifier

./: .gitignore  Makefile  pyproject.toml  requirements.txt
src/apps/contracts/: __init__.py  apps.py  models.py
src/apps/contracts/migrations/: 0001_initial.py  0002_auto_20181201_0756.py  0003_contract_execution.py  0004_auto_20181201_0850.py  0004_auto_20181201_0919.py  0005_auto_20181201_0925.py  0006_auto_20181201_0933.py  0007_auto_20181201_0938.py  0008_auto_20181201_0940.py  0009_customer_geometry.py  0010_auto_20181201_0956.py  0011_auto_20181201_0957.py  0012_auto_20181201_0958.py  0013_auto_20181201_1000.py  0014_merge_20181201_1039.py  0015_auto_20181201_1117.py  0016_auto_20181201_1119.py
src/apps/core/: apps.py  enums.py  models.py  utils.py
src/apps/core/jobs/: scheduler.py
src/apps/core/jobs/queues/: __init__.py  contracts.py  extend_contract.py  send_to_tg.py
src/apps/core/migrations/: 0001_initial.py  0002_auto_20181201_1117.py
src/apps/scoring/: models.py  services.py
src/apps/scoring/migrations/: 0001_initial.py
src/apps/telegram/: gateway.py  services.py
src/apps/telegram/templates/telegram/: message.txt
src/apps/zakupki/: services.py
src/project/: urls.py  wsgi.py
src/project/settings/: __init__.py  example_settings_local.py  settings.py  settings_local.py
