[tool.poetry]
name = "zakup_notifier"
version = "0.1.0"
description = ""
authors = ["Artem Kanarev <aduchimergen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
django-extensions = "^2.1"
python-telegram-bot = "^11.1"
pysocks = "^1.6"
django-rq = "^1.2"
python-dateutil = "^2.7"
rq-scheduler = "^0.8.3"
requests = "^2.20"

[tool.poetry.dev-dependencies]
ipython = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
